# hamming-code

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: hamming.rs  main.rs
