[package]
name = "hamming_code_simd"
version = "1.0.0"
authors = ["Juxhin Dyrmishi Brigjaj<juxhinbox@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"

[profile.dev]
opt-level = 0

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
